--- a/application-dev.properties
+++ b/application-dev.properties
@@ -1,2 +1,9 @@
 server.port=9092
 module.dummy.msg=Hello world, Good Evening! form dev.
+
+spring.datasource.url=jdbc:mysql://localhost:3306/dummy?useSSL=false
+spring.datasource.username=root
+spring.datasource.password=Welcome@123
+
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+spring.jpa.hibernate.ddl-auto=update
