--- a/application-dev.properties
+++ b/application-dev.properties
@@ -7,3 +7,11 @@ spring.datasource.password=Welcome@123
 
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.jpa.hibernate.ddl-auto=update
+
+
+# Configure the Okta JWT resource server
+spring.security.oauth2.resourceserver.jwt.issuer-uri=https://dev-m72bnrjx0d4hz6ws.us.auth0.com/
+spring.security.oauth2.resourceserver.jwt.jwk-set-uri=https://dev-m72bnrjx0d4hz6ws.us.auth0.com/.well-known/jwks.json
+
+# If you have a specific audience for your API, you can configure that as well
+spring.security.oauth2.resourceserver.jwt.audiences=https://javadummy/api
