--- a/application-production.properties
+++ b/application-production.properties
@@ -1,2 +1,17 @@
 server.port=9090
 module.dummy.msg=Hello world, Good Morning! from prod.
+
+spring.datasource.url=jdbc:mysql://localhost:3306/dummy?useSSL=false
+spring.datasource.username=root
+spring.datasource.password=Welcome@123
+
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+spring.jpa.hibernate.ddl-auto=update
+
+
+# Configure the Okta JWT resource server
+spring.security.oauth2.resourceserver.jwt.issuer-uri=https://dev-m72bnrjx0d4hz6ws.us.auth0.com/
+spring.security.oauth2.resourceserver.jwt.jwk-set-uri=https://dev-m72bnrjx0d4hz6ws.us.auth0.com/.well-known/jwks.json
+
+# If you have a specific audience for your API, you can configure that as well
+spring.security.oauth2.resourceserver.jwt.audiences=https://javadummy/api
