--- a/application-production.properties
+++ b/application-production.properties
@@ -15,3 +15,5 @@ spring.security.oauth2.resourceserver.jwt.jwk-set-uri=https://dev-m72bnrjx0d4hz6
 
 # If you have a specific audience for your API, you can configure that as well
 spring.security.oauth2.resourceserver.jwt.audiences=https://javadummy/api
+
+spring.data.mongodb.uri=mongodb://localhost:27017/mongodb
