--- a/application-production.properties
+++ b/application-production.properties
@@ -1,7 +1,7 @@
 server.port=9090
 module.dummy.msg=Hello world, Good Morning! from prod.
 
-spring.datasource.url=jdbc:mysql://localhost:3306/dummy?useSSL=false
+spring.datasource.url=jdbc:mysql://localhost:3306/dummy?allowPublicKeyRetrieval=true&useSSL=false
 spring.datasource.username=root
 spring.datasource.password=Welcome@123
 
